# Latineloquamur-toolkit-IPA-transcriber-and-App

./: README.md
ACCENTUATION/: Latin_accentuation_code.py  readme.txt  sample_accentuation.txt
APP_MATERIAL/: App Material (intro_accentuation_ipa_classical_ecclesiastical).txt  readme.txt
CLASSICAL&ECCLESIASTICAL LATIN IPA TRANSCRIBER/: Cargo.toml  README.md
CLASSICAL&ECCLESIASTICAL LATIN IPA TRANSCRIBER/sample IPA/: classical.txt  ecclesiastical.txt
CLASSICAL&ECCLESIASTICAL LATIN IPA TRANSCRIBER/src/: main.rs
Mobile APP/: Data_App_accentuation_Ipa.txt  INFO_LIST.txt  Intro_App.txt
Mobile APP/App_design/res/assets/flutter_assets/: AssetManifest.json
Mobile APP/App_design/res/assets/flutter_assets/assets/: AnyConv.com__infoapp 1.xml  AnyConv.com__infoapp2.xml  handbook.csv
Mobile APP/App_design/res/drawable/: launch_background.xml  notification_bg.xml  notification_bg_low.xml  notification_icon_background.xml  notification_tile_bg.xml
Mobile APP/App_design/res/drawable-anydpi-v21/: splash.xml
Mobile APP/App_design/res/drawable-v21/: notification_action_background.xml
src/Data_dir/: sampletxt.txt
src/authors_chrono/: AUTHORS-LIST  Cargo.toml
src/exporter/: Cargo.toml
src/graphql_queries/: Cargo.toml
src/latin_lemmatizer/: Cargo.toml
src/latin_lemmatizer/examples/: csv_lemmatizer.rs  lemlat_lemmatizer.rs
src/latin_utilities/: Cargo.toml
src/latin_utilities/examples/: standard_conversion.rs
src/query_driver/: Cargo.toml
src/query_system/: Cargo.toml
src/runner/: Cargo.toml
src/writers/: Cargo.toml
