[package]
name = "latin_utilities"
version = "0.1.0"
authors = ["HIDDEN FOR REVIEW"]
edition = "2020"
description = "Low level utilites to work with latin strings"

[dependencies]
unicode-normalization = "0.1.8"
lazy_static = "1.3.0"

[dev-dependencies]
criterion = "0.2"
clap = "2.33"
proptest = "0.9.3"

[[bench]]
name = "converter_benchmark"
harness = false