[package]
name = "query_driver"
version = "0.1.0"
authors = ["HIDDEN FOR REVIEW"] 
edition = "2020"
description = "System in charge of initializing the query system, so that the GraphQL client can operate"

[dependencies]
query_system = { version = "0.1.0", path = "../query_system"}
latin_lemmatizer = { version = "0.1.0", path = "../latin_lemmatizer"}
authors_chrono = { version = "0.1.0", path = "../authors_chrono"}
salsa = "0.13.0"
walkdir = "2"
bimap = "0.4.0"